# rules_oci

./: .gitignore  MODULE.bazel  fetch.bzl  internal_deps.bzl
e2e/assertion/: MODULE.bazel
e2e/assertion/registry/: go.mod  go.sum
e2e/assertion/wksp/: MODULE.bazel  WORKSPACE
e2e/smoke/: MODULE.bazel  WORKSPACE.bazel
e2e/wasm/: MODULE.bazel  WORKSPACE
oci/: dependencies.bzl
oci/private/: push.bzl  push.sh.tpl
