"Bazel dependencies"

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//registry:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_containerregistry",
    "com_github_r3labs_diff_v3",
)
