bazel_dep(name = "rules_oci", version = "0.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4")
bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_rust", version = "0.62.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.2.0")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)
